--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/package",
-  "name": "package-name",
+  "name": "recombine-tagged-template-args",
   "version": "0.0.0",
   "license": "Apache-2.0",
   "types": "esm/index.d.ts",
@@ -16,8 +16,7 @@
     "esm"
   ],
   "description": "",
-  "repository": "github:harrysolovay/package-name",
-  "keywords": [],
+  "repository": "github:harrysolovay/recombine-tagged-template-args",
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -42,8 +41,7 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
-      "**/*.test.ts",
-      "**/tests/**/*"
+      "**/*.test.ts"
     ],
     "testPathIgnorePatterns": [
       "node_modules"
